# fastapi-project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-dev-back.yaml  env.example  pyproject.toml  requirements.txt
src/: run.sh
src/app/: main.py
src/app/api/: email.py  items.py  users.py
src/app/core/: db.py  dependency.py  email_utils.py  security.py  settings.py  utils.py
src/app/crud/: items.py  users.py
src/app/models/: __init__.py  items.py  roles.py  users.py
src/app/schemas/: users.py
src/app/templates/: email.html
src/migrations/: env.py
src/migrations/versions/: 44280d0456ea_items.py  dd48e7225997_roles.py  e261e39a38e6_user.py
src/tests/: conftest.py
src/tests/api/: conftest.py  test_users.py
src/tests/migrations/: conftest.py  test_migrations_up_to_date.py  test_stairway.py
