[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Evgeny Malikov <evgeny.m3v@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
pydantic = {extras = ["email"], version = "^2.6.0"}
pydantic-settings = "^2.1.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pylint = "^3.0.3"
pylint-pytest = "^1.1.7"
mypy = "^1.8.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# black
[tool.black]
line-length = 79
extend-exclude = "migrations/"

# isort
[tool.isort]
profile = "black"
extend_skip_glob = "migrations"
line_length = 79
lines_after_imports = 2

# pytest
[tool.pytest.ini_options]
addopts = "-v"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath=["src"]
testpaths = ["src/tests"]

# mypy
[tool.mypy]
exclude = ["migrations/"]


[tool.pylint]
ignore = [".git", "__pycache__", "migrations", ".venv"]
load-plugins = ["pylint_pytest"]
max-line-length = 79
disable = ["C0114, C0115, C0116, W1514, W3101, R0903"]
